[metadata]
name = python-watcher_metering_drivers
summary = Drivers for the Watcher Metering agent
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    watcher_metering_drivers
data_files =
    etc/ = etc/*

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    watcher_metering_drivers = watcher_metering_drivers.opts:list_opts
watcher_metering.drivers =
    cpu_count = watcher_metering_drivers.cpu:CpuCountPuller
    cpu_idle = watcher_metering_drivers.cpu:CpuIdlePuller
    cpu_user = watcher_metering_drivers.cpu:CpuUserPuller
    disk_total = watcher_metering_drivers.disk:DiskTotalSpacePuller
    disk_free = watcher_metering_drivers.disk:DiskFreeSpacePuller
    disk_used = watcher_metering_drivers.disk:DiskUsedSpacePuller
    memory_total = watcher_metering_drivers.memory:TotalMemoryPuller
    memory_free = watcher_metering_drivers.memory:FreeMemoryPuller
    memory_used = watcher_metering_drivers.memory:UsedMemoryPuller
    swap_total = watcher_metering_drivers.swap:TotalSwapPuller
    swap_free = watcher_metering_drivers.swap:FreeSwapPuller
    swap_used = watcher_metering_drivers.swap:UsedSwapPuller
    energy_rms_current = watcher_metering_drivers.pdu:PduRmsCurrentPuller
    energy_rms_voltage = watcher_metering_drivers.pdu:PduRmsVoltagePuller
    energy_active_power = watcher_metering_drivers.pdu:PduActivePowerPuller
    energy_apparent_power = watcher_metering_drivers.pdu:PduApparentPowerPuller
    energy_power_factor = watcher_metering_drivers.pdu:PduPowerFactorPuller
    energy_active_energy = watcher_metering_drivers.pdu:PduActiveEnergyPuller
    energy_on_off = watcher_metering_drivers.pdu:PduOnOffPuller
    energy_frequency = watcher_metering_drivers.pdu:PduFrequencyPuller
    instance_cpu_used = watcher_metering_drivers.instance_cpu:InstanceCpuNodePuller

[build_sphinx]
source_dir = doc/source
build_dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html


[compile_catalog]
directory = watcher_metering_drivers/locale
domain = watcher_metering_drivers

[update_catalog]
domain = watcher_metering_drivers
output_dir = watcher_metering_drivers/locale
input_file = watcher_metering_drivers/locale/watcher_metering_drivers.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = watcher_metering_drivers/locale/watcher_metering_drivers.pot
